--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: install dependencies
           command: |
             python3 -m venv venv
-            . venv/bin/activate
+            source .venv/bin/activate
             pip install -r requirements.txt
 
       - save_cache:
@@ -47,20 +47,20 @@ jobs:
       - run:
           name: run integration tests
           command: |
-            . venv/bin/activate
+            source .venv/bin/activate
             make test-integration
 
       - run:
           name: run unit tests
           command: |
-            . venv/bin/activate
+            source .venv/bin/activate
             make test-unit
 
 
       - run:
           name: run validate
           command: |
-            . venv/bin/activate
+            source .venv/bin/activate
             make validate
 
 
