change from env to .env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,24 +45,25 @@ jobs:
       # https://pytest.org
       # https://nose.readthedocs.io
       - run:
-          name: run integration tests
-          command: |
-            . .venv/bin/activate
-            make test-integration
-
-      - run:
           name: run unit tests
           command: |
-            . .venv/bin/activate
+            . venv/bin/activate
             make test-unit
 
 
       - run:
           name: run validate
           command: |
-            . .venv/bin/activate
+            . venv/bin/activate
             make validate
 
+      - run:
+          name: run integration tests
+          command: |
+            . venv/bin/activate
+            make test-integration
+
+      
 
       - store_artifacts:
           path: tests/coverage_html
