--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,10 @@ jobs:
       # - image: circleci/postgres:9.4
 
     working_directory: ~/repo
+    
+    environment:
+      FLASK_ENV: test
+      FLASK_APP: microblog.py
 
     steps:
       - checkout
