--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,7 @@ jobs:
 
     working_directory: ~/repo
     
-    environment:
-      FLASK_ENV: test
-      FLASK_APP: microblog.py
-
+    
     steps:
       - checkout
 
@@ -30,6 +27,12 @@ jobs:
             - v1-dependencies-{{ checksum "requirements.txt" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            make install-test
 
       - run:
           name: install dependencies
@@ -38,13 +41,7 @@ jobs:
             . venv/bin/activate
             pip install -r requirements.txt
 
-   
 
-      # run tests!
-      # this example uses Django's built-in test-runner
-      # other common Python testing frameworks include pytest and nose
-      # https://pytest.org
-      # https://nose.readthedocs.io
       - run:
           name: run unit tests
           command: |
